# datavault

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
src/datavault/: main.py
tests/: test_nothing.py
